--- a/faq.html
+++ b/faq.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ďťż<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-<title> FASLITER - wykonawca i producent opakowań</title>
+<title> FASLITER - wykonawca i producent opakowaĹ</title>
 <meta name="Keywords" content="opakowania, standy, torby, etykiety, kaszerowanie, sztancowanie, wycinanie, klejenie" />
-<meta name="Description" content="FASLITER - wykonawca i producent opakowań - Strona oficjalna" />
+<meta name="Description" content="FASLITER - wykonawca i producent opakowaĹ - Strona oficjalna" />
 <script src="jbs/iefix.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="jbs/fasliter.css" />
 <style type="text/css">
@@ -28,7 +28,7 @@ h3 {font: normal 16px georgia; margin: 3px; color:#A9D0BA; }
 <li><a href="firma.html">O FIRMIE</a></li>
 <li class="sub"><a href="#">OFERTA</a>
 <ul>
-<li><a href="lite.html" title="Pudła i pudełka z tektury litej ">Opakowania z tektury litej</a></li>
+<li><a href="lite.html" title="PudĹa i pudeĹka z tektury litej ">Opakowania z tektury litej</a></li>
 <li><a href="mikro.html" title="Opakowania z mikrofali">Opakowania z mikrofali</a></li>
 <li><a href="standy.html" title="Standy reklamowe">Standy reklamowe</a></li>
 <li><a href="ekspo.html" title="Ekspozytory reklamowe">Ekspozytory</a></li>
@@ -37,71 +37,72 @@ h3 {font: normal 16px georgia; margin: 3px; color:#A9D0BA; }
 <li><a href="inne.html" title="Inne">Inne</a></li>
 </ul>
 </li>
-<li><a href="uslugi.html">USŁUGI</a></li>
+<li><a href="uslugi.html">USĹUGI</a></li>
 <li><a href="faq.html">FAQ</a></li>
 <li><a href="kontakt.html">KONTAKT</a></li>
 </ul>
 </div>
 <div id="main">
-<h1>Najczęściej zadawane pytania</h1>
+<h1>NajczÄĹciej zadawane pytania</h1>
 <div class="opis">
 <h3>- Kaszerowanie -</h3>
 <p>
-Uszlachetnianie, w celu dekoracyjnym, wyrobu papierniczego poprzez oklejanie cienkim papierem zadrukowanym, papieru znacznie grubszego, np. tektury falistej, której nie da się bezpośrednio zadrukować na maszynie drukarskiej z powodu jej grubości.
+Uszlachetnianie, w celu dekoracyjnym, wyrobu papierniczego poprzez oklejanie cienkim papierem zadrukowanym, papieru znacznie grubszego, np. tektury falistej, ktĂłrej nie da siÄ bezpoĹrednio zadrukowaÄ na maszynie drukarskiej z powodu jej gruboĹci.
 </p>
 </div>
 <div class="opis">
 <h3>- Tektura lita -</h3>
 <p>
-Najgrubszy materiał papierniczy. Powstaje przez sprasowanie kilkunastu warstw masy papierniczej.
+Najgrubszy materiaĹ papierniczy. Powstaje przez sprasowanie kilkunastu warstw masy papierniczej.
 </p>
 </div>
 <div class="opis">
 <h3>- Tektura falista -</h3>
 <p>
-Tektura falista powstaje z połączenia kilku warstw papieru falą papierową, która powoduje znaczne zwiększenie sztywności arkusza. Jest używana przeważnie do produkcji opakowań zbiorczych (kartonów).
+Tektura falista powstaje z poĹÄczenia kilku warstw papieru falÄ papierowÄ, ktĂłra powoduje znaczne zwiÄkszenie sztywnoĹci arkusza. Jest uĹźywana przewaĹźnie do produkcji opakowaĹ zbiorczych (kartonĂłw).
 </p>
 </div>
 <div class="opis">
 <h3>- Bigowanie -</h3>
 <p>
-To proces introligatorski polegający na ułatwieniu zginania materiału w określonym <br />i zamierzonym miejscu materiału.
+To proces introligatorski polegajÄcy na uĹatwieniu zginania materiaĹu w okreĹlonym <br />i zamierzonym miejscu materiaĹu.
 </p>
 </div>
 <div class="opis">
 <h3>- Falcowanie -</h3>
 <p>
-Falcowanie to jedno- lub wielokrotne składanie arkusza papieru, czystego <br /> lub zadrukowanego, na pół (najczęściej) lub w dowolnych innych proporcjach, <br />w celu osiągnięcia docelowego formatu.
+Falcowanie to jedno- lub wielokrotne skĹadanie arkusza papieru, czystego <br /> lub zadrukowanego, na pĂłĹ (najczÄĹciej) lub w dowolnych innych proporcjach, <br />w celu osiÄgniÄcia docelowego formatu.
 </p>
 </div>
 <div class="opis">
 <h3>- Wykrawanie / sztancowanie -</h3>
 <p>
-Czynność polegająca na wykrawaniu z papieru, kartonu, tektury pożądanego kształtu opakowania lub wyrobu papierniczego o skomplikowanych kształtach.
+CzynnoĹÄ polegajÄca na wykrawaniu z papieru, kartonu, tektury poĹźÄdanego ksztaĹtu opakowania lub wyrobu papierniczego o skomplikowanych ksztaĹtach.
 </p>
 </div>
 <div class="opis">
 <h3>- Wykrojnik -</h3>
 <p>
-Wykrojnik to narzędzie do wycinania określonego kształtu z arkusza papieru lub tektury, <br />które jednym uderzeniem wycina z arkusza cały złożony wzór np. siatkę koperty.
+Wykrojnik to narzÄdzie do wycinania okreĹlonego ksztaĹtu z arkusza papieru lub tektury, <br />ktĂłre jednym uderzeniem wycina z arkusza caĹy zĹoĹźony wzĂłr np. siatkÄ koperty.
 </p>
 </div>
 <div class="opis">
 <h3>- Sitodruk (serigrafia) -</h3>
 <p>
-To jedyna technika drukarska, umożliwiająca zadruk wielu rodzajów podłoży, o różnej fakturze <br />i kształcie, np. T-shirt, długopis, arkusz papieru, butelka, okładka kalendarza, itp.. <br /> Jest niskonakładową techniką drukarską .
+To jedyna technika drukarska, umoĹźliwiajÄca zadruk wielu rodzajĂłw podĹoĹźy, o rĂłĹźnej fakturze <br />i ksztaĹcie, np. T-shirt, dĹugopis, arkusz papieru, butelka, okĹadka kalendarza, itp.. <br /> Jest niskonakĹadowÄ technikÄ drukarskÄ .
 </p>
 </div>
 <div class="opis">
 <h3>- Offset -</h3>
 <p>
-Właściwie: druk offsetowy. To technika druku o dużej prędkości. Nadaje się do druku <br /> form "płaskich": opakowań, ulotek, plakatów, broszur, drukowanych w większej ilości.<br /> Jest wysokonakładową techniką drukarską .
+WĹaĹciwie: druk offsetowy. To technika druku o duĹźej prÄdkoĹci. Nadaje siÄ do druku <br /> form "pĹaskich": opakowaĹ, ulotek, plakatĂłw, broszur, drukowanych w wiÄkszej iloĹci.<br /> Jest wysokonakĹadowÄ technikÄ drukarskÄ .
 </p>
 </div>
 <p>
-Z przyjemnością odpowiemy na każde pytanie.
+Z przyjemnoĹciÄ odpowiemy na kaĹźde pytanie.
 </p>
 </div>
 <div id="bottom">Copyright &copy; 2012 FASLITER S.C. OPAKOWANIA KARTONOWE &diams; All rights reserved &diams;  Aktualizacja: 28-III-2012 </div>
 </body>
 </html>
+
