--- a/firma.html
+++ b/firma.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ďťż<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-<title> FASLITER - wykonawca i producent opakowań</title>
+<title> FASLITER - wykonawca i producent opakowaĹ</title>
 <meta name="Keywords" content="opakowania, standy, torby, etykiety, kaszerowanie, sztancowanie, wycinanie, klejenie" />
-<meta name="Description" content="FASLITER - wykonawca i producent opakowań - Strona oficjalna" />
+<meta name="Description" content="FASLITER - wykonawca i producent opakowaĹ - Strona oficjalna" />
 <script src="jbs/iefix.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="jbs/fasliter.css" />
 <style type="text/css">
@@ -26,7 +26,7 @@
 <li><a href="firma.html">O FIRMIE</a></li>
 <li class="sub"><a href="#">OFERTA</a>
 <ul>
-<li><a href="lite.html" title="Pudła i pudełka z tektury litej ">Opakowania z tektury litej</a></li>
+<li><a href="lite.html" title="PudĹa i pudeĹka z tektury litej ">Opakowania z tektury litej</a></li>
 <li><a href="mikro.html" title="Opakowania z mikrofali">Opakowania z mikrofali</a></li>
 <li><a href="standy.html" title="Standy reklamowe">Standy reklamowe</a></li>
 <li><a href="ekspo.html" title="Ekspozytory reklamowe">Ekspozytory</a></li>
@@ -35,7 +35,7 @@
 <li><a href="inne.html" title="Inne">Inne</a></li>
 </ul>
 </li>
-<li><a href="uslugi.html">USŁUGI</a></li>
+<li><a href="uslugi.html">USĹUGI</a></li>
 <li><a href="faq.html">FAQ</a></li>
 <li><a href="kontakt.html">KONTAKT</a></li>
 </ul>
@@ -46,28 +46,29 @@
 Firma Fasliter istnieje od 20 lat.  
 </p>
 <p>
-Nasz zakład zatrudnia 20 osób. Dzięki ciągłemu rozwojowi i gromadzonemu doświadczeniu możemy Państwu zaoferować wysokiej klasy produkty i usługi. Bogaty park maszynowy oraz doświadczenie pozwalają na profesjonalne prowadzenie produkcji opakowań
-z różnych materiałów. 
+Nasz zakĹad zatrudnia 20 osĂłb. DziÄki ciÄgĹemu rozwojowi i gromadzonemu doĹwiadczeniu moĹźemy PaĹstwu zaoferowaÄ wysokiej klasy produkty i usĹugi. Bogaty park maszynowy oraz doĹwiadczenie pozwalajÄ na profesjonalne prowadzenie produkcji opakowaĹ
+z rĂłĹźnych materiaĹĂłw. 
 </p>
 <p style="color: #A3C7B3">
-<strong>Wieloletnia i harmonijna współpraca z naszymi kontrahentami pozwala nam zaoferować Państwu obsługę kompleksową, obejmującą projektowanie, druk, wycięcie, klejenie oraz dostarczenie gotowego opakowania do klienta.</strong>
+<strong>Wieloletnia i harmonijna wspĂłĹpraca z naszymi kontrahentami pozwala nam zaoferowaÄ PaĹstwu obsĹugÄ kompleksowÄ, obejmujÄcÄ projektowanie, druk, wyciÄcie, klejenie oraz dostarczenie gotowego opakowania do klienta.</strong>
 </p>
 <p style="color: #B4C2BC">
 <strong>Wykonujemy opakowania z papieru, tektury litej, tektury falistej, priplaku. 
 Produkujemy m.in. standy reklamowe, ekspozytory reklamowe, torby reklamowe,
-torby papierowe, etykiety, obwoluty, wkładki usztywniające, kształtki. Przyjmujemy do realizacji projekty zewnętrzne. 
-Wykonujemy usługowo klejenie, sztancowanie, nadruki.</strong>
+torby papierowe, etykiety, obwoluty, wkĹadki usztywniajÄce, ksztaĹtki. Przyjmujemy do realizacji projekty zewnÄtrzne. 
+Wykonujemy usĹugowo klejenie, sztancowanie, nadruki.</strong>
 </p>
 <p>  
-Firma Fasliter ma w swoim dorobku realizacje i projekty dla klientów krajowych i zagranicznych, producentów artykułów przemysłowych, spożywczych, firm farmaceutycznych, odzieżowych, kosmetyków, chemicznych, agd i innych.
+Firma Fasliter ma w swoim dorobku realizacje i projekty dla klientĂłw krajowych i zagranicznych, producentĂłw artykuĹĂłw przemysĹowych, spoĹźywczych, firm farmaceutycznych, odzieĹźowych, kosmetykĂłw, chemicznych, agd i innych.
 </p>
 <p>  
 Na naszej stronie prezentujemy jedynie wybrane produkty.
-Jeśli są Państwo zainteresowani naszą ofertą prosimy o kontakt.
-Z przyjemnością odpowiemy na każde pytanie.
+JeĹli sÄ PaĹstwo zainteresowani naszÄ ofertÄ prosimy o kontakt.
+Z przyjemnoĹciÄ odpowiemy na kaĹźde pytanie.
 </p>
 <img style="border: 1px solid #64A287" src="img/fasliter1.jpg" alt="Fasliter" border="0" height="130" width="225" /><br /><br />
 </div>
 <div id="bottom">Copyright &copy; 2012 FASLITER S.C. OPAKOWANIA KARTONOWE - All rights reserved -  Aktualizacja: 28-III-2012 </div>
 </body>
 </html>
+
