--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ďťż<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
 <title>FASLITER - Opakowania - Produkacja i projektowanie</title>
-<meta name="Keywords" content="opakowania, pudełka z tektury, stand, torby papierowe, etykiety, ekspozytory, kaszerowanie, sztancowanie, wycinanie, klejenie, projektowanie opakowań, etui, wykrojniki" />
-<meta name="Description" content="FASLITER - Projektowanie i produkcja opakowań. Sztancowanie, klejenie, druk. Prace nietypowe" />
+<meta name="Keywords" content="opakowania, pudeĹka z tektury, stand, torby papierowe, etykiety, ekspozytory, kaszerowanie, sztancowanie, wycinanie, klejenie, projektowanie opakowaĹ, etui, wykrojniki" />
+<meta name="Description" content="FASLITER - Projektowanie i produkcja opakowaĹ. Sztancowanie, klejenie, druk. Prace nietypowe" />
 <script src="jbs/iefix.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="jbs/fasliter.css" />
 <style type="text/css">
@@ -37,7 +37,7 @@ div#main a:hover {color: #577062; }
 <li><a href="firma.html">O FIRMIE</a></li>
 <li class="sub"><a href="#">OFERTA</a>
 <ul>
-<li><a href="lite.html" title="Pudła i pudełka z tektury litej ">Opakowania z tektury litej</a></li>
+<li><a href="lite.html" title="PudĹa i pudeĹka z tektury litej ">Opakowania z tektury litej</a></li>
 <li><a href="mikro.html" title="Opakowania z mikrofali">Opakowania z mikrofali</a></li>
 <li><a href="standy.html" title="Standy reklamowe">Standy reklamowe</a></li>
 <li><a href="ekspo.html" title="Ekspozytory reklamowe">Ekspozytory</a></li>
@@ -46,18 +46,18 @@ div#main a:hover {color: #577062; }
 <li><a href="inne.html" title="Inne">Inne</a></li>
 </ul>
 </li>
-<li><a href="uslugi.html">USŁUGI</a></li>
+<li><a href="uslugi.html">USĹUGI</a></li>
 <li><a href="faq.html">FAQ</a></li>
 <li><a href="kontakt.html">KONTAKT</a></li>
 </ul>
 </div>
 <div id="main"><img border="0" alt="FASLITER - Opakowania - Produkacja i projektowanie" src="img/main.jpg" width="894" height="498" />
-<a href="mikro.html"><h1 style="font: normal 20px Georgia; color: #415B50;">pudła z mikrofali</h1></a>
-<a href="lite.html"><h2>pudła i pudełka<br />z tektury litej</h2></a>
+<a href="mikro.html"><h1 style="font: normal 20px Georgia; color: #415B50;">pudĹa z mikrofali</h1></a>
+<a href="lite.html"><h2>pudĹa i pudeĹka<br />z tektury litej</h2></a>
 <a href="standy.html"><h3>standy<br />reklamowe</h3></a>
 <a href="ekspo.html"><h4>ekspozytory</h4></a>
 <a href="uslugi.html"><h5>sztancowanie</h5></a>
-<a href="uslugi.html"><h6>projektowanie<br />opakowań</h6></a>
+<a href="uslugi.html"><h6>projektowanie<br />opakowaĹ</h6></a>
 <a href="obwoluty.html"><p id="one">obwoluty,<br />etykiety</p></a>
 <a href="torby.html"><p id="two">torby<br />papierowe</p></a>
 <a href="uslugi.html"><p id="three">druk</p></a>
@@ -67,3 +67,4 @@ div#main a:hover {color: #577062; }
 </div>
 </body>
 </html>
+
