--- a/inne.html
+++ b/inne.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ďťż<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-<title> FASLITER - wykonawca i producent opakowań</title>
+<title> FASLITER - wykonawca i producent opakowaĹ</title>
 <meta name="Keywords" content="opakowania, standy, torby, etykiety, kaszerowanie, sztancowanie, wycinanie, klejenie" />
-<meta name="Description" content="FASLITER - wykonawca i producent opakowań - Strona oficjalna" />
+<meta name="Description" content="FASLITER - wykonawca i producent opakowaĹ - Strona oficjalna" />
 <script src="jbs/iefix.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="jbs/fasliter.css" />
 <style type="text/css">
@@ -26,7 +26,7 @@
 <li><a href="firma.html">O FIRMIE</a></li>
 <li class="sub"><a href="#">OFERTA</a>
 <ul>
-<li><a href="lite.html" title="Pudła i pudełka z tektury litej ">Opakowania z tektury litej</a></li>
+<li><a href="lite.html" title="PudĹa i pudeĹka z tektury litej ">Opakowania z tektury litej</a></li>
 <li><a href="mikro.html" title="Opakowania z mikrofali">Opakowania z mikrofali</a></li>
 <li><a href="standy.html" title="Standy reklamowe">Standy reklamowe</a></li>
 <li><a href="ekspo.html" title="Ekspozytory reklamowe">Ekspozytory</a></li>
@@ -35,7 +35,7 @@
 <li><a href="inne.html" title="Inne">Inne</a></li>
 </ul>
 </li>
-<li><a href="uslugi.html">USŁUGI</a></li>
+<li><a href="uslugi.html">USĹUGI</a></li>
 <li><a href="faq.html">FAQ</a></li>
 <li><a href="kontakt.html">KONTAKT</a></li>
 </ul>
@@ -43,19 +43,20 @@
 <div id="main">
 <h1>INNE</h1>
 <p>
-W tej kategorii zawarliśmy:<br />
-&bull; dość rzadko wykonywane formy na zamówienie: urny, kaszerowane, sztywne okładki do katalogów tapet, płytek, tkanin, akcesoriów wnętrzarskich, daszki-czapeczki z kartonu, osłony przeciwsłoneczne, itp. <br />
-Oferujemy indywidualny projekt, uwzględniający kolorystykę i branżę firmy.<br />
-&bull;  typowe produkty z tektury, wykonywane na codzień: kształtki do pudeł zbiorczych oraz wkładki usztywniające.
+W tej kategorii zawarliĹmy:<br />
+&bull; doĹÄ rzadko wykonywane formy na zamĂłwienie: urny, kaszerowane, sztywne okĹadki do katalogĂłw tapet, pĹytek, tkanin, akcesoriĂłw wnÄtrzarskich, daszki-czapeczki z kartonu, osĹony przeciwsĹoneczne, itp. <br />
+Oferujemy indywidualny projekt, uwzglÄdniajÄcy kolorystykÄ i branĹźÄ firmy.<br />
+&bull;  typowe produkty z tektury, wykonywane na codzieĹ: ksztaĹtki do pudeĹ zbiorczych oraz wkĹadki usztywniajÄce.
 </p>
 <div class="fotos">
-<img src="foto/opako-inne01.jpg" alt="Osłona przeciwsłoneczna" border="0" height="370" width="400" /> &nbsp;<img src="foto/opako-inne02.jpg" alt="Okładka katalogu tapet" border="0" height="370" width="400" /><br />
+<img src="foto/opako-inne01.jpg" alt="OsĹona przeciwsĹoneczna" border="0" height="370" width="400" /> &nbsp;<img src="foto/opako-inne02.jpg" alt="OkĹadka katalogu tapet" border="0" height="370" width="400" /><br />
 <img src="foto/opako-inne03.jpg" alt="Czapeczka" border="0" height="370" width="400" /> &nbsp;<img src="foto/opako-inne04.jpg" alt="Czapeczka" border="0" height="370" width="400" /><br />
-<img src="foto/urny.jpg" alt="Urny" border="0" height="400" width="495" /> &nbsp;<img src="foto/regal.jpg" alt="Regał ekspozycyjny" border="0" height="400" width="305" /><br />
-<img src="foto/opako-inne05.jpg" alt="Okładka" border="0" height="370" width="400" /> &nbsp;<img src="foto/opako-inne06.jpg" alt="Okładka" border="0" height="370" width="400" /><br />
+<img src="foto/urny.jpg" alt="Urny" border="0" height="400" width="495" /> &nbsp;<img src="foto/regal.jpg" alt="RegaĹ ekspozycyjny" border="0" height="400" width="305" /><br />
+<img src="foto/opako-inne05.jpg" alt="OkĹadka" border="0" height="370" width="400" /> &nbsp;<img src="foto/opako-inne06.jpg" alt="OkĹadka" border="0" height="370" width="400" /><br />
 <br />
 </div>
 </div>
 <div id="bottom">Copyright &copy; 2012 FASLITER S.C. OPAKOWANIA KARTONOWE - All rights reserved - Aktualizacja: 28-III-2012 </div>
 </body>
 </html>
+
