--- a/kontakt.html
+++ b/kontakt.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ďťż<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-<title> FASLITER - wykonawca i producent opakowań</title>
+<title> FASLITER - wykonawca i producent opakowaĹ</title>
 <meta name="Keywords" content="opakowania, standy, torby, etykiety, kaszerowanie, sztancowanie, wycinanie, klejenie" />
-<meta name="Description" content="FASLITER - wykonawca i producent opakowań - Strona oficjalna" />
+<meta name="Description" content="FASLITER - wykonawca i producent opakowaĹ - Strona oficjalna" />
 <script src="jbs/iefix.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="jbs/fasliter.css" />
 <style type="text/css">
@@ -27,7 +27,7 @@ a.kontakt:hover {color: #FF9C6C; }
 <li><a href="firma.html">O FIRMIE</a></li>
 <li class="sub"><a href="#">OFERTA</a>
 <ul>
-<li><a href="lite.html" title="Pudła i pudełka z tektury litej ">Opakowania z tektury litej</a></li>
+<li><a href="lite.html" title="PudĹa i pudeĹka z tektury litej ">Opakowania z tektury litej</a></li>
 <li><a href="mikro.html" title="Opakowania z mikrofali">Opakowania z mikrofali</a></li>
 <li><a href="standy.html" title="Standy reklamowe">Standy reklamowe</a></li>
 <li><a href="ekspo.html" title="Ekspozytory reklamowe">Ekspozytory</a></li>
@@ -36,14 +36,14 @@ a.kontakt:hover {color: #FF9C6C; }
 <li><a href="inne.html" title="Inne">Inne</a></li>
 </ul>
 </li>
-<li><a href="uslugi.html">USŁUGI</a></li>
+<li><a href="uslugi.html">USĹUGI</a></li>
 <li><a href="faq.html">FAQ</a></li>
 <li><a href="kontakt.html">KONTAKT</a></li>
 </ul>
 </div>
 <div id="main">
 <h1>KONTAKT</h1>
-<p>FASLITER S.C. 93-348 Łódź, ul. Demokratyczna 117, GPS: 51°42'37.979"N, 19°27'29.952"E</p>
+<p>FASLITER S.C. 93-348 ĹĂłdĹş, ul. Demokratyczna 117, GPS: 51Â°42'37.979"N, 19Â°27'29.952"E</p>
 <p>tel.: 42 640-93-88, fax: 42 645-79-74, <a class="kontakt" href="mailto:fasliter@fasliter.com.pl">e-mail: fasliter@fasliter.com.pl</a></p>
 <a  class="kontakt" href="http://www.zumi.pl/namapie.html?qt=&loc=%A3%F3d%BC%2C+Demokratyczna+117&cId=&sId=&moreCities=">Mapa ZUMI</a><br /><br />
 <img style="border:1px solid #4D5751" src="img/fasliter_dojazd.gif" alt="Fasliter - dojazd" border="0" height="287" width="660" /><br /><br />
@@ -51,3 +51,4 @@ a.kontakt:hover {color: #FF9C6C; }
 <div id="bottom">Copyright &copy; 2012 FASLITER S.C. OPAKOWANIA KARTONOWE - All rights reserved - Aktualizacja: 28-III-2012 </div>
 </body>
 </html>
+
