--- a/lite.html
+++ b/lite.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ďťż<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-<title> FASLITER - wykonawca i producent opakowań</title>
+<title> FASLITER - wykonawca i producent opakowaĹ</title>
 <meta name="Keywords" content="opakowania, standy, torby, etykiety, kaszerowanie, sztancowanie, wycinanie, klejenie" />
-<meta name="Description" content="FASLITER - wykonawca i producent opakowań - Strona oficjalna" />
+<meta name="Description" content="FASLITER - wykonawca i producent opakowaĹ - Strona oficjalna" />
 <script src="jbs/iefix.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="jbs/fasliter.css" />
 <style type="text/css">
@@ -26,7 +26,7 @@
 <li><a href="firma.html">O FIRMIE</a></li>
 <li class="sub"><a href="#">OFERTA</a>
 <ul>
-<li><a href="lite.html" title="Pudła i pudełka z tektury litej ">Opakowania z tektury litej</a></li>
+<li><a href="lite.html" title="PudĹa i pudeĹka z tektury litej ">Opakowania z tektury litej</a></li>
 <li><a href="mikro.html" title="Opakowania z mikrofali">Opakowania z mikrofali</a></li>
 <li><a href="standy.html" title="Standy reklamowe">Standy reklamowe</a></li>
 <li><a href="ekspo.html" title="Ekspozytory reklamowe">Ekspozytory</a></li>
@@ -35,17 +35,17 @@
 <li><a href="inne.html" title="Inne">Inne</a></li>
 </ul>
 </li>
-<li><a href="uslugi.html">USŁUGI</a></li>
+<li><a href="uslugi.html">USĹUGI</a></li>
 <li><a href="faq.html">FAQ</a></li>
 <li><a href="kontakt.html">KONTAKT</a></li>
 </ul>
 </div>
 <div id="main">
-<h1>PUDEŁKA Z TEKTURY LITEJ</h1>
+<h1>PUDEĹKA Z TEKTURY LITEJ</h1>
 <p>
-Tektura lita jest najczęściej używana do produkcji opakowań jednostkowych - pozwala podkreślić atrakcyjność produktu. 
-Pełnokolorowy druk offsetowy, lakier, tłoczenia, często niecodzienny kształt wyróżniają opakowania jednostkowe z tektury litej. 
-Posiadamy wiele wykrojników-wzorów opakowań. Opracowujemy wykrojniki na zamówienie.
+Tektura lita jest najczÄĹciej uĹźywana do produkcji opakowaĹ jednostkowych - pozwala podkreĹliÄ atrakcyjnoĹÄ produktu. 
+PeĹnokolorowy druk offsetowy, lakier, tĹoczenia, czÄsto niecodzienny ksztaĹt wyrĂłĹźniajÄ opakowania jednostkowe z tektury litej. 
+Posiadamy wiele wykrojnikĂłw-wzorĂłw opakowaĹ. Opracowujemy wykrojniki na zamĂłwienie.
 </p>
 <div class="fotos">
 <img src="foto/tektura-lita_03.jpg" alt="Opakowanie" border="0" height="370" width="355" /> &nbsp;<img src="foto/tektura-lita_04.jpg" alt="Opakowanie" border="0" height="370" width="445" /><br />
@@ -61,3 +61,4 @@ Posiadamy wiele wykrojników-wzorów opakowań. Opracowujemy wykrojniki na zamówien
 <div id="bottom">Copyright &copy; 2012 FASLITER S.C. OPAKOWANIA KARTONOWE - All rights reserved - Aktualizacja: 28-III-2012 </div>
 </body>
 </html>
+
