--- a/uslugi.html
+++ b/uslugi.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ďťż<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-<title> FASLITER - wykonawca i producent opakowań</title>
+<title> FASLITER - wykonawca i producent opakowaĹ</title>
 <meta name="Keywords" content="opakowania, standy, torby, etykiety, kaszerowanie, sztancowanie, wycinanie, klejenie" />
-<meta name="Description" content="FASLITER - wykonawca i producent opakowań - Strona oficjalna" />
+<meta name="Description" content="FASLITER - wykonawca i producent opakowaĹ - Strona oficjalna" />
 <script src="jbs/iefix.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="jbs/fasliter.css" />
 <style type="text/css">
@@ -30,7 +30,7 @@ li {font: normal 12px/16px verdana; color: #A9D0BA; }
 <li><a href="firma.html">O FIRMIE</a></li>
 <li class="sub"><a href="#">OFERTA</a>
 <ul>
-<li><a href="lite.html" title="Pudła i pudełka z tektury litej ">Opakowania z tektury litej</a></li>
+<li><a href="lite.html" title="PudĹa i pudeĹka z tektury litej ">Opakowania z tektury litej</a></li>
 <li><a href="mikro.html" title="Opakowania z mikrofali">Opakowania z mikrofali</a></li>
 <li><a href="standy.html" title="Standy reklamowe">Standy reklamowe</a></li>
 <li><a href="ekspo.html" title="Ekspozytory reklamowe">Ekspozytory</a></li>
@@ -39,28 +39,28 @@ li {font: normal 12px/16px verdana; color: #A9D0BA; }
 <li><a href="inne.html" title="Inne">Inne</a></li>
 </ul>
 </li>
-<li><a href="uslugi.html">USŁUGI</a></li>
+<li><a href="uslugi.html">USĹUGI</a></li>
 <li><a href="faq.html">FAQ</a></li>
 <li><a href="kontakt.html">KONTAKT</a></li>
 </ul>
 </div>
 <div id="main">
-<h1>USŁUGI</h1>
+<h1>USĹUGI</h1>
 <div class="opis">
 <p>
-W ramach naszych usług mogą zamówić Państwo wykonanie jednej z podanych niżej usług, połączenie kilku z nich, lub usługę kompleksową, która obejmuje projekt graficzny, opracowanie wykrojnika, druk, wykonanie i dostarczenie opakowania do Państwa.<br /><br />
+W ramach naszych usĹug mogÄ zamĂłwiÄ PaĹstwo wykonanie jednej z podanych niĹźej usĹug, poĹÄczenie kilku z nich, lub usĹugÄ kompleksowÄ, ktĂłra obejmuje projekt graficzny, opracowanie wykrojnika, druk, wykonanie i dostarczenie opakowania do PaĹstwa.<br /><br />
 OFERUJEMY:
 </p>
 </div>
 <div id="lista">
 <ul id="uslugi">
-<li>KLEJENIE (ręczne i maszynowe)</li>
+<li>KLEJENIE (rÄczne i maszynowe)</li>
 <li>KASZEROWANIE</li>
-<li>DRUK OFFSETOWY <br />i NADRUK TECHNIKĄ SITODRUKU:
+<li>DRUK OFFSETOWY <br />i NADRUK TECHNIKÄ SITODRUKU:
         <ul>
         <li> ulotek</li>
         <li> etykiet</li>
-        <li> opakowań</li>
+        <li> opakowaĹ</li>
         <li> kalendarzy</li>
         <li> tablic</li>
         <li> toreb papierowych</li>
@@ -68,7 +68,7 @@ OFERUJEMY:
         <li> i innych form</li>
         </ul>
         </li>
-<li>PROJEKTOWANIE OPAKOWAŃ</li>
+<li>PROJEKTOWANIE OPAKOWAĹ</li>
 </ul>
 </div>
 <br />
@@ -76,3 +76,4 @@ OFERUJEMY:
 <div id="bottom">Copyright &copy; 2012 FASLITER S.C. OPAKOWANIA KARTONOWE - All rights reserved -  Aktualizacja: 28-III-2012 </div>
 </body>
 </html>
+
