--- a/mikro.html
+++ b/mikro.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ďťż<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-<title> FASLITER - wykonawca i producent opakowań</title>
+<title> FASLITER - wykonawca i producent opakowaĹ</title>
 <meta name="Keywords" content="opakowania, standy, torby, etykiety, kaszerowanie, sztancowanie, wycinanie, klejenie" />
-<meta name="Description" content="FASLITER - wykonawca i producent opakowań - Strona oficjalna" />
+<meta name="Description" content="FASLITER - wykonawca i producent opakowaĹ - Strona oficjalna" />
 <script src="jbs/iefix.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="jbs/fasliter.css" />
 <style type="text/css">
@@ -26,7 +26,7 @@
 <li><a href="firma.html">O FIRMIE</a></li>
 <li class="sub"><a href="#">OFERTA</a>
 <ul>
-<li><a href="lite.html" title="Pudła i pudełka z tektury litej ">Opakowania z tektury litej</a></li>
+<li><a href="lite.html" title="PudĹa i pudeĹka z tektury litej ">Opakowania z tektury litej</a></li>
 <li><a href="mikro.html" title="Opakowania z mikrofali">Opakowania z mikrofali</a></li>
 <li><a href="standy.html" title="Standy reklamowe">Standy reklamowe</a></li>
 <li><a href="ekspo.html" title="Ekspozytory reklamowe">Ekspozytory</a></li>
@@ -35,18 +35,18 @@
 <li><a href="inne.html" title="Inne">Inne</a></li>
 </ul>
 </li>
-<li><a href="uslugi.html">USŁUGI</a></li>
+<li><a href="uslugi.html">USĹUGI</a></li>
 <li><a href="faq.html">FAQ</a></li>
 <li><a href="kontakt.html">KONTAKT</a></li>
 </ul>
 </div>
 <div id="main">
-<h1>PUDŁA i PUDEŁKA z MIKROFALI</h1>
+<h1>PUDĹA i PUDEĹKA z MIKROFALI</h1>
 <p>
-Tektura falista służy do produkcji pudełek o większej wytrzymałości. 
-Dysponujemy wieloma wzorami i wykrojnikami pudełek. W razie potrzeby, na zamówienie, 
-jesteśmy w stanie wykonać każdy wzór opakowania w wybranych przez Państwa rozmiarach lub wybranym wzorze FEFCO. 
-Zbiorcze pudełka z mikrofali klapowe nadrukowujemy wg wzoru klienta metodą sitodruku.
+Tektura falista sĹuĹźy do produkcji pudeĹek o wiÄkszej wytrzymaĹoĹci. 
+Dysponujemy wieloma wzorami i wykrojnikami pudeĹek. W razie potrzeby, na zamĂłwienie, 
+jesteĹmy w stanie wykonaÄ kaĹźdy wzĂłr opakowania w wybranych przez PaĹstwa rozmiarach lub wybranym wzorze FEFCO. 
+Zbiorcze pudeĹka z mikrofali klapowe nadrukowujemy wg wzoru klienta metodÄ sitodruku.
 </p>
 <div class="fotos">
 <img src="foto/mikrofala_01.jpg" alt="Opakowanie" border="0" height="370" width="463" />&nbsp; <img src="foto/mikrofala_02.jpg" alt="Opakowanie" border="0" height="370" width="337" /><br />
@@ -60,3 +60,4 @@ Zbiorcze pudełka z mikrofali klapowe nadrukowujemy wg wzoru klienta metodą sitod
 <div id="bottom">Copyright &copy; 2012 FASLITER S.C. OPAKOWANIA KARTONOWE - All rights reserved - Aktualizacja: 28-III-2012 </div>
 </body>
 </html>
+
