--- a/obwoluty.html
+++ b/obwoluty.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ďťż<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-<title> FASLITER - wykonawca i producent opakowań</title>
+<title> FASLITER - wykonawca i producent opakowaĹ</title>
 <meta name="Keywords" content="opakowania, standy, torby, etykiety, kaszerowanie, sztancowanie, wycinanie, klejenie" />
-<meta name="Description" content="FASLITER - wykonawca i producent opakowań - Strona oficjalna" />
+<meta name="Description" content="FASLITER - wykonawca i producent opakowaĹ - Strona oficjalna" />
 <script src="jbs/iefix.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="jbs/fasliter.css" />
 <style type="text/css">
@@ -26,7 +26,7 @@
 <li><a href="firma.html">O FIRMIE</a></li>
 <li class="sub"><a href="#">OFERTA</a>
 <ul>
-<li><a href="lite.html" title="Pudła i pudełka z tektury litej ">Opakowania z tektury litej</a></li>
+<li><a href="lite.html" title="PudĹa i pudeĹka z tektury litej ">Opakowania z tektury litej</a></li>
 <li><a href="mikro.html" title="Opakowania z mikrofali">Opakowania z mikrofali</a></li>
 <li><a href="standy.html" title="Standy reklamowe">Standy reklamowe</a></li>
 <li><a href="ekspo.html" title="Ekspozytory reklamowe">Ekspozytory</a></li>
@@ -35,7 +35,7 @@
 <li><a href="inne.html" title="Inne">Inne</a></li>
 </ul>
 </li>
-<li><a href="uslugi.html">USŁUGI</a></li>
+<li><a href="uslugi.html">USĹUGI</a></li>
 <li><a href="faq.html">FAQ</a></li>
 <li><a href="kontakt.html">KONTAKT</a></li>
 </ul>
@@ -43,8 +43,8 @@
 <div id="main">
 <h1>OBWOLUTY i ETYKIETY</h1>
 <p>
-Etykiety i obwoluty wykonujemy na zamówienie. Materiał, kształt, kolorystykę, wielkość ustalamy z klientem.<br />
-Do wykonania etykiet i obwolut stosujemy dostępne techniki drukarskie (offset, sitodruk) oraz wykończeniowe: foliowanie, złocenia, tłoczenia, perforację,itp.
+Etykiety i obwoluty wykonujemy na zamĂłwienie. MateriaĹ, ksztaĹt, kolorystykÄ, wielkoĹÄ ustalamy z klientem.<br />
+Do wykonania etykiet i obwolut stosujemy dostÄpne techniki drukarskie (offset, sitodruk) oraz wykoĹczeniowe: foliowanie, zĹocenia, tĹoczenia, perforacjÄ,itp.
 </p>
 <div class="fotos">
 <img src="foto/obwoluta_01.jpg" alt="Obwoluta" border="0" height="370" width="336" />&nbsp; <img src="foto/obwoluta_02.jpg" alt="Obwoluta" border="0" height="370" width="464" /><br />
@@ -56,3 +56,4 @@ Do wykonania etykiet i obwolut stosujemy dostępne techniki drukarskie (offset, s
 <div id="bottom">Copyright &copy; 2011 FASLITER S.C. OPAKOWANIA KARTONOWE - All rights reserved - Aktualizacja: 28-III-2012 </div>
 </body>
 </html>
+
