--- a/standy.html
+++ b/standy.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ďťż<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-<title> FASLITER - wykonawca i producent opakowań</title>
+<title> FASLITER - wykonawca i producent opakowaĹ</title>
 <meta name="Keywords" content="opakowania, standy, torby, etykiety, kaszerowanie, sztancowanie, wycinanie, klejenie" />
-<meta name="Description" content="FASLITER - wykonawca i producent opakowań - Strona oficjalna" />
+<meta name="Description" content="FASLITER - wykonawca i producent opakowaĹ - Strona oficjalna" />
 <script src="jbs/iefix.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="jbs/fasliter.css" />
 <style type="text/css">
@@ -26,7 +26,7 @@
 <li><a href="firma.html">O FIRMIE</a></li>
 <li class="sub"><a href="#">OFERTA</a>
 <ul>
-<li><a href="lite.html" title="Pudła i pudełka z tektury litej ">Opakowania z tektury litej</a></li>
+<li><a href="lite.html" title="PudĹa i pudeĹka z tektury litej ">Opakowania z tektury litej</a></li>
 <li><a href="mikro.html" title="Opakowania z mikrofali">Opakowania z mikrofali</a></li>
 <li><a href="standy.html" title="Standy reklamowe">Standy reklamowe</a></li>
 <li><a href="ekspo.html" title="Ekspozytory reklamowe">Ekspozytory</a></li>
@@ -35,7 +35,7 @@
 <li><a href="inne.html" title="Inne">Inne</a></li>
 </ul>
 </li>
-<li><a href="uslugi.html">USŁUGI</a></li>
+<li><a href="uslugi.html">USĹUGI</a></li>
 <li><a href="faq.html">FAQ</a></li>
 <li><a href="kontakt.html">KONTAKT</a></li>
 </ul>
@@ -43,10 +43,10 @@
 <div id="main">
 <h1>STANDY REKLAMOWE</h1>
 <p>
-Standy tekturowe są lekkie, łatwe w przechowywaniu i składaniu. Można je ustawić w sklepie, w markecie itp. <br />
-Standy wykonujemy w ilości nawet kilku sztuk, zależnie od potrzeb.
-Do wykonania standu używamy grubej tektury, którą oklejamy wydrukowanym projektem graficznym.
-Kształt i rozmiar zwykle wyznacza projekt Klienta.
+Standy tekturowe sÄ lekkie, Ĺatwe w przechowywaniu i skĹadaniu. MoĹźna je ustawiÄ w sklepie, w markecie itp. <br />
+Standy wykonujemy w iloĹci nawet kilku sztuk, zaleĹźnie od potrzeb.
+Do wykonania standu uĹźywamy grubej tektury, ktĂłrÄ oklejamy wydrukowanym projektem graficznym.
+KsztaĹt i rozmiar zwykle wyznacza projekt Klienta.
 </p>
 <div class="fotos">
 <img src="foto/stand_11.jpg" alt="Stand" border="0" height="400" width="320" /> &nbsp; <img src="foto/stand_12.jpg" alt="Stand" border="0" height="400" width="480" /><br />
@@ -58,3 +58,4 @@ Kształt i rozmiar zwykle wyznacza projekt Klienta.
 <div id="bottom">Copyright &copy; 2012 FASLITER S.C. OPAKOWANIA KARTONOWE - All rights reserved - Aktualizacja: 28-III-2012 </div>
 </body>
 </html>
+
